--- a/app/src/main/res/layout/activity_scan_visual.xml
+++ b/app/src/main/res/layout/activity_scan_visual.xml
@@ -22,17 +22,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/captureButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
-        android:background="#80000000" 
-        android:padding="8dp"
-        android:text="Apunta a un código QR"
-        android:textColor="@color/white"
-        android:textSize="16sp"
+        android:layout_marginBottom="48dp"
+        android:src="@android:drawable/ic_menu_camera"
+        app:backgroundTint="@color/morado"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:tint="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
